--- a/app/src/main/res/layout/activity_write_note.xml
+++ b/app/src/main/res/layout/activity_write_note.xml
@@ -120,7 +120,8 @@ android:layout_marginBottom="20dp"
                 android:background="@drawable/timer"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/layout_time"
-               />
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
             <LinearLayout
                 android:id="@+id/layout_time"
                 android:layout_alignParentRight="true"
