--- a/app/src/main/res/layout/activity_write_note.xml
+++ b/app/src/main/res/layout/activity_write_note.xml
@@ -101,47 +101,55 @@ android:layout_marginBottom="20dp"
     <LinearLayout
 
         android:id="@+id/layout3"
-        android:layout_marginLeft="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="68dp"
         android:orientation="vertical"
         android:paddingTop="5dp"
         android:gravity="center"
-        android:paddingBottom="5dp">
+        android:paddingBottom="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
         <RelativeLayout
             android:layout_gravity="center"
-            android:layout_width="137dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/tv_title_time"
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/xanhchu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="thời gian công việc:"
+                android:textSize="13sp"/>
             <ImageButton
                 android:id="@+id/ib_timer"
-                android:layout_width="43dp"
-                android:layout_height="50dp"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
                 android:background="@drawable/timer"
-                android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/layout_time"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_centerInParent="true" />
             <LinearLayout
                 android:id="@+id/layout_time"
-                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@+id/ib_timer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="right"
                 >
+
                 <TextView
                     android:id="@+id/tv_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+android:layout_marginLeft="10dp"
 
-                    android:layout_gravity="center"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
                     android:text="12/12/2017"
                     android:textColor="@color/xanhchu"
-                    android:textSize="16sp"
-                    android:gravity="center"
-                    android:layout_marginBottom="5dp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/tv_timer"
@@ -150,7 +158,7 @@ android:layout_marginBottom="20dp"
                     android:gravity="center"
                     android:text="04:08"
                     android:textColor="@color/xanhchu"
-                    android:textSize="16sp"
+                    android:textSize="12sp"
                     android:layout_gravity="bottom"/>
             </LinearLayout>
         </RelativeLayout>
@@ -158,7 +166,14 @@ android:layout_marginBottom="20dp"
 
 
 
+
     </LinearLayout>
+    <RelativeLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
